# SlamBot2

./: Cargo.toml  Makefile  PROGRESS.md  README.md
libraries/: Cargo.toml  rust-toolchain.toml
libraries/packet_encoding/: Cargo.toml  README.md
libraries/packet_encoding/src/: lib.rs
libraries/packet_encoding/tests/: integration_tests.rs
libraries/packet_router/: Cargo.toml
libraries/packet_router/src/: client.rs  lib.rs
libraries/packet_trait/: Cargo.toml
libraries/packet_trait/src/: lib.rs
libraries/packet_wasm/: Cargo.toml
libraries/packet_wasm/src/: lib.rs
libraries/robot/: Cargo.toml
libraries/robot/src/: main.rs  serial_client.rs
libraries/robot/src/nodes/: clock.rs  log.rs  mod.rs  motion_controller.rs  position_estimator.rs  serial_adapter.rs  serial_client.rs  websocket_client.rs
libraries/topics/: Cargo.toml
libraries/topics/src/: lib.rs  packet_container.rs  packet_data.rs
libraries/topics/src/ros/: diagnostic_msgs.rs  mod.rs
motor_controller/: Cargo.toml
motor_controller/src/: clock.rs  consts.rs  encoders.rs  hardware.rs  host_connection.rs  main.rs  motor_controller.rs  packet_data.rs
packet_encoding/: Cargo.toml
packet_encoding/src/: lib.rs
packet_encoding/tests/: integration_tests.rs
web_interface/my-app/: package-lock.json  package.json  vite.config.ts
web_interface/my-app/src/: App.css  App.tsx  index.css  logTypes.ts  logUtils.ts  messageFormat.ts  packetEncoding.test.ts  packetEncoding.ts  useHostConnection.ts  usePacketCodec.ts  useWebSocket.ts
web_interface/my-app/src/__tests__/: packetCodec.test.ts
web_interface/my-app/src/components/: ConnectionPanel.tsx  DiagnosticGraph.tsx  DiagnosticsTab.tsx  FiltersPanel.tsx  LogTable.tsx  PositionPlot.tsx  PositionTab.tsx  Tabs.css
