[package]
edition      = "2024"
name         = "espc3-test-project"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "espc3-test-project"
path = "./src/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c3", "unstable"] }
esp-rtos = { version = "0.2.0", features = [
  "esp-alloc",
  "esp-radio",
  "esp32c3",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }

critical-section = "1.2.0"
embedded-io = "0.7.1"
esp-alloc = "0.9.0"

heapless = { version = "0.9.2", features = ["serde"] }
packet_encoding = { path = "../libraries/packet_encoding", default-features = false }
topics = { path = "../libraries/topics" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
embedded-hal = "1.0.0"



[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
