[package]
name = "packet_encoding"
version = "0.1.0"
edition = "2024"

[dependencies]
cobs = { version = "0.5.0", features=[], default-features = false}
crc16 = "0.4.0"
heapless = "0.9.2"
serde = { version = "1.0", default-features = false, features = ["derive"] }
minicbor = { version = "0.25", default-features = false }
minicbor-serde = { version = "0.3", default-features = false }


[features]
std = [
    "cobs/std",
    "serde/std", 
    "minicbor/std",
    "minicbor-serde/std"
]

default = ["std"]
